# FastAPI_template

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml
src/: config.py  database.py  main.py  repository.py
src/tests/unit_tests/test_users/: test_api.py
src/users/: dependencies.py  models.py  router.py  schemas.py  service.py  utils.py
