[tool.poetry]
name = "fastapi-template"
version = "0.1.0"
description = ""
authors = ["Ilya Seleznev <seleznev.ilya.a@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["all"], version = "^0.103.0"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
